<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/checkbox1"
            android:layout_margin="10dp"
            android:text="@string/very_important"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/checkbox2"
            android:layout_margin="10dp"
            android:text="@string/urgent"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/checkbox3"
            android:layout_margin="10dp"
            android:text="@string/hurry"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/checkbox4"
            android:layout_margin="10dp"
            android:text="@string/very_soon"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/radioButtijn5"
            android:layout_margin="10dp"
            android:text="@string/no_time"
            android:textSize="23sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </RadioGroup>

</LinearLayout>