<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.barthclem.goalsmanager.ChangePassword">

        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/toolBar"
                layout="@layout/toolbar"
                />

        </LinearLayout>


    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:src="@drawable/goals"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/title"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_lost_password"
        android:gravity="center"
        android:textColor="@color/fonts"/>
    <EditText
        android:id="@+id/oldPassword"
        android:hint="@string/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/newPasswordnow"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/confirmNewPasswordnow"
        android:hint="@string/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/changeLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_fpassword"
        android:textSize="20sp"
        android:layout_margin="18dp"
        android:background="@color/button"
        android:textColor="@color/common_signin_btn_dark_text_pressed"/>





</LinearLayout>
