<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorTab"
    tools:context="com.example.barthclem.goalsmanager.ChangeLastPassword">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/title"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_lost_password"
        android:layout_marginTop="20dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/newPassword"
        android:hint="@string/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/confirmNewPassword"
        android:hint="@string/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/changeLostPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_fpassword"
        android:textSize="20sp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:textColor="@color/common_signin_btn_dark_text_pressed"
        android:background="@color/button"/>


</LinearLayout>
