<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.barthclem.goalsmanager.forgotPassword">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar"
            />
        </LinearLayout>
    <TextView
        android:id="@+id/securityQuestions"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/security_question"
        android:layout_margin="20dp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/securityAnswer"
        android:hint="@string/answer_to_security_qustion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:gravity="center"/>
    <EditText
        android:id="@+id/username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/recoverPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recoverPassword"
        android:textSize="20sp"
        android:layout_margin="18dp"
        android:gravity="center"
        android:textColor="@color/common_signin_btn_dark_text_pressed"
        android:background="@color/button"/>


</LinearLayout>
