<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_bg"
    tools:context="com.example.barthclem.goalsmanager.Welcome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/toolBar"
                layout="@layout/toolbar"
                />

        </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/goals" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:text="@string/welcomeTitle"
        android:gravity="center"
        android:textColor="@color/common_signin_btn_dark_text_pressed"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:text="@string/newUserLink"
        android:gravity="center"
        android:layout_margin="20dp"/>
    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">
    <Button
        android:id="@+id/registerButton"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/registerButton"
        android:textColor="@color/fontslight"
        android:background="@drawable/circle"
        android:layout_weight="0.5"
        />
    <!--<TextView
        android:id="@+id/ExistingUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="27sp"
        android:text=""
        android:gravity="center"
        android:layout_margin="20dp"/>-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/loginButton"
        android:textSize="19sp"
        android:textColor="@color/common_signin_btn_dark_text_pressed"
        android:background="@drawable/circle"
        android:layout_weight="0.5"
        />
    </LinearLayout>

</LinearLayout>
